# ddd-demo-rs

./: Cargo.toml  README.md
application/: Cargo.toml
application/src/: lib.rs
application/src/services/: mod.rs  user_app_service.rs
domain/: Cargo.toml
domain/src/entities/: mod.rs  user_entity.rs
domain/src/error/: mod.rs  user_error.rs
domain/src/repositories/: user_repository.rs
domain/src/services/: user_service.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/database/: mod.rs
infrastructure/src/entities/: sys_user.rs
infrastructure/src/repositories/: user_repository.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240819_000001_sys_user.rs
presentation/: Cargo.toml
presentation/src/: lib.rs
presentation/src/handlers/: mod.rs
presentation/src/handlers/user_handler/: mod.rs  query_user.rs  register_user.rs
presentation/src/routers/: mod.rs  user_route.rs
src/: arg.rs  main.rs
